--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
 <body>
     <header>
         <div class="navbar">
+
             <div class="nav-logo border">
                 <div class="logo"></div>
             </div>
+
+            <div class="nav-adress border">
+                <p class="address1">Deliver to</p>
+                <div class="add-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="address2">India</p>
+                </div>
+            </div>
+            
         </div>
     </header>
 </body>
