--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
                 </div>
             </div>
 
+            <div class="nav-signin border">
+                <span class="text1">Hello, sign in</span>
+                <p class="text2">Account & Lists</p>
+            </div>
+            <div class="nav-order border">
+                <span class="text1">Returns</span>
+                <p class="text2">&Orders</p>
+            </div>
+
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                Cart
+            </div>
         </div>
     </header>
 </body>
