--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
                 Cart
             </div>
         </div>
+
+        <div class="panel">
+            <div class="panel-all">
+                <i class="fa-solid fa-list"></i>
+                All
+            </div>
+            <div class="panel-opts">
+                <a>Today's Deals</a>
+                <a>Costumer Service</a>
+                <a>Registry</a>
+                <a>Gift Cards</a>
+                <a>Sell</a>
+            </div>
+            <div class="panel-deals">Shop deals on Electronics</div>
+        </div>
     </header>
 </body>
 </html>
